# thai-plate-synth

./: .gitignore  Makefile  README.md  pyproject.toml
app/: verify_labels.py
assets/fonts/: README.md
data/real_scrape/roboflow/: clean_labels.jsonl  gold_labels.jsonl  provenance.jsonl  summary.json  vlm_labels.jsonl
experiments/figures/: gold_eval.md  gold_eval_preproc.md  gold_eval_rerank.md  gold_eval_rerank_full.md  real_eval_v1_v2.md  scrape_summary.md  vlm_label_audit.md
experiments/figures/synth_v1/: args.yaml  results.csv
experiments/figures/synth_v2/: args.yaml  results.csv
experiments/figures/synth_v3/: args.yaml  results.csv
experiments/figures/synth_v3a/: args.yaml  results.csv
notebooks/: thai_plate_synth_colab.ipynb
scripts/: eval_on_gold.py  eval_on_real.py  eval_preproc_sweep.py  eval_with_rerank.py  make_pseudo_labels.py  make_pseudo_labels_v2.py  merge_datasets.py
src/thai_plate_synth/: __init__.py  _make_gallery.py  alphabet.py  augment.py  render.py  rerank.py  train.py
src/thai_plate_synth/scrape/: __init__.py  audit.py  dedupe.py  filter_corpus.py  reparse.py  roboflow_scrape.py  vlm_label.py
